--- a/TODO
+++ b/TODO
@@ -1,10 +1,18 @@
-implementing lowering to the typed MIR
-- we will have to make malloc() available as part of the external call
-- we will need architecture-specific information
-    - size of types
-    - we need to make external calls to malloc
-- we will need to add code to make variables afterwards
-verify that lowering closures works alright in MIR/write lowring of STLC
+make test cases that 1] don't use closures 2] test records
+
+re-structure pipeline to better support debugging multiple analyses/re-writes
+- optimally you will have a single compilation pipeline
+- turning on debug mode dumps debug info to other files
+
+apparently declarations made in the condition of an if and/or while
+statement and/or expression are available in the body. Unify the rest of the system
+
+add support for records/structs to the MIR (no nested indexing though)
+- also add declare expressions to receive arguments
+
+add separate closure-rewrites to the AST
+
+
 implement polymorphic types/typechecking
 implement type-inference
 add arrays/pointers???????
